updating the result

--- a/yinyang_bugs.html
+++ b/yinyang_bugs.html
@@ -59,3 +59,4 @@
 <a href=https://github.com/Z3Prover/z3/issues/2926>https://github.com/Z3Prover/z3/issues/2926</a> Reported<br>
 <a href=https://github.com/Z3Prover/z3/issues/3072>https://github.com/Z3Prover/z3/issues/3072</a> Confirmed<br>
 <a href=https://github.com/Z3Prover/z3/issues/3926>https://github.com/Z3Prover/z3/issues/3926</a> Fixed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4153>https://github.com/Z3Prover/z3/issues/4153</a> Fixed<br>
