--- a/opfuzz_bugs.html
+++ b/opfuzz_bugs.html
@@ -182,6 +182,29 @@
 <a href=https://github.com/CVC4/CVC4/issues/4328>https://github.com/CVC4/CVC4/issues/4328</a> Reported<br>
 <a href=https://github.com/CVC4/CVC4/issues/4366>https://github.com/CVC4/CVC4/issues/4366</a> Reported<br>
 <a href=https://github.com/CVC4/CVC4/issues/4369>https://github.com/CVC4/CVC4/issues/4369</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4384>https://github.com/CVC4/CVC4/issues/4384</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4385>https://github.com/CVC4/CVC4/issues/4385</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4386>https://github.com/CVC4/CVC4/issues/4386</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4391>https://github.com/CVC4/CVC4/issues/4391</a> Fixed<br>
+<a href=https://github.com/CVC4/CVC4/issues/4393>https://github.com/CVC4/CVC4/issues/4393</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4396>https://github.com/CVC4/CVC4/issues/4396</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4398>https://github.com/CVC4/CVC4/issues/4398</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4400>https://github.com/CVC4/CVC4/issues/4400</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4401>https://github.com/CVC4/CVC4/issues/4401</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4405>https://github.com/CVC4/CVC4/issues/4405</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4410>https://github.com/CVC4/CVC4/issues/4410</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4411>https://github.com/CVC4/CVC4/issues/4411</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4412>https://github.com/CVC4/CVC4/issues/4412</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4414>https://github.com/CVC4/CVC4/issues/4414</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4416>https://github.com/CVC4/CVC4/issues/4416</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4425>https://github.com/CVC4/CVC4/issues/4425</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4426>https://github.com/CVC4/CVC4/issues/4426</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4427>https://github.com/CVC4/CVC4/issues/4427</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4428>https://github.com/CVC4/CVC4/issues/4428</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4429>https://github.com/CVC4/CVC4/issues/4429</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4431>https://github.com/CVC4/CVC4/issues/4431</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4433>https://github.com/CVC4/CVC4/issues/4433</a> Reported<br>
+<a href=https://github.com/CVC4/CVC4/issues/4434>https://github.com/CVC4/CVC4/issues/4434</a> Reported<br>
 
 <h2>Z3</h2>
 <a href=https://github.com/Z3Prover/z3/issues/2577>https://github.com/Z3Prover/z3/issues/2577</a> Fixed<br>
@@ -229,7 +252,7 @@
 <a href=https://github.com/Z3Prover/z3/issues/2728>https://github.com/Z3Prover/z3/issues/2728</a> Confirmed<br>
 <a href=https://github.com/Z3Prover/z3/issues/2733>https://github.com/Z3Prover/z3/issues/2733</a> Fixed<br>
 <a href=https://github.com/Z3Prover/z3/issues/2736>https://github.com/Z3Prover/z3/issues/2736</a> Confirmed<br>
-<a href=https://github.com/Z3Prover/z3/issues/2736>https://github.com/Z3Prover/z3/issues/2736</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/2736>https://github.com/Z3Prover/z3/issues/2736</a> Confirmed<br>
 <a href=https://github.com/Z3Prover/z3/issues/2741>https://github.com/Z3Prover/z3/issues/2741</a> Fixed<br>
 <a href=https://github.com/Z3Prover/z3/issues/2742>https://github.com/Z3Prover/z3/issues/2742</a> Confirmed<br>
 <a href=https://github.com/Z3Prover/z3/issues/2743>https://github.com/Z3Prover/z3/issues/2743</a> Fixed<br>
@@ -762,8 +785,71 @@
 <a href=https://github.com/Z3Prover/z3/issues/4029>https://github.com/Z3Prover/z3/issues/4029</a> Reported<br>
 <a href=https://github.com/Z3Prover/z3/issues/4030>https://github.com/Z3Prover/z3/issues/4030</a> Reported<br>
 <a href=https://github.com/Z3Prover/z3/issues/4031>https://github.com/Z3Prover/z3/issues/4031</a> Reported<br>
-<a href=https://github.com/Z3Prover/z3/issues/4036>https://github.com/Z3Prover/z3/issues/4036</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4036>https://github.com/Z3Prover/z3/issues/4036</a> Fixed<br>
 <a href=https://github.com/Z3Prover/z3/issues/4040>https://github.com/Z3Prover/z3/issues/4040</a> Reported<br>
 <a href=https://github.com/Z3Prover/z3/issues/4041>https://github.com/Z3Prover/z3/issues/4041</a> Reported<br>
 <a href=https://github.com/Z3Prover/z3/issues/4042>https://github.com/Z3Prover/z3/issues/4042</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4044>https://github.com/Z3Prover/z3/issues/4044</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4049>https://github.com/Z3Prover/z3/issues/4049</a> Fixed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4050>https://github.com/Z3Prover/z3/issues/4050</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4053>https://github.com/Z3Prover/z3/issues/4053</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4060>https://github.com/Z3Prover/z3/issues/4060</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4065>https://github.com/Z3Prover/z3/issues/4065</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4067>https://github.com/Z3Prover/z3/issues/4067</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4069>https://github.com/Z3Prover/z3/issues/4069</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4071>https://github.com/Z3Prover/z3/issues/4071</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4073>https://github.com/Z3Prover/z3/issues/4073</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4081>https://github.com/Z3Prover/z3/issues/4081</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4082>https://github.com/Z3Prover/z3/issues/4082</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4083>https://github.com/Z3Prover/z3/issues/4083</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4087>https://github.com/Z3Prover/z3/issues/4087</a> Dup<br>
+<a href=https://github.com/Z3Prover/z3/issues/4088>https://github.com/Z3Prover/z3/issues/4088</a> Fixed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4089>https://github.com/Z3Prover/z3/issues/4089</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4090>https://github.com/Z3Prover/z3/issues/4090</a> Fixed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4091>https://github.com/Z3Prover/z3/issues/4091</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4096>https://github.com/Z3Prover/z3/issues/4096</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4097>https://github.com/Z3Prover/z3/issues/4097</a> Fixed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4098>https://github.com/Z3Prover/z3/issues/4098</a> Fixed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4099>https://github.com/Z3Prover/z3/issues/4099</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4100>https://github.com/Z3Prover/z3/issues/4100</a> Fixed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4102>https://github.com/Z3Prover/z3/issues/4102</a> Fixed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4104>https://github.com/Z3Prover/z3/issues/4104</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4106>https://github.com/Z3Prover/z3/issues/4106</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4108>https://github.com/Z3Prover/z3/issues/4108</a> Fixed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4112>https://github.com/Z3Prover/z3/issues/4112</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4113>https://github.com/Z3Prover/z3/issues/4113</a> Fixed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4114>https://github.com/Z3Prover/z3/issues/4114</a> Fixed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4119>https://github.com/Z3Prover/z3/issues/4119</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4120>https://github.com/Z3Prover/z3/issues/4120</a> Fixed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4121>https://github.com/Z3Prover/z3/issues/4121</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4122>https://github.com/Z3Prover/z3/issues/4122</a> Confirmed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4123>https://github.com/Z3Prover/z3/issues/4123</a> Fixed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4124>https://github.com/Z3Prover/z3/issues/4124</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4125>https://github.com/Z3Prover/z3/issues/4125</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4126>https://github.com/Z3Prover/z3/issues/4126</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4127>https://github.com/Z3Prover/z3/issues/4127</a> Fixed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4128>https://github.com/Z3Prover/z3/issues/4128</a> Fixed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4129>https://github.com/Z3Prover/z3/issues/4129</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4144>https://github.com/Z3Prover/z3/issues/4144</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4145>https://github.com/Z3Prover/z3/issues/4145</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4146>https://github.com/Z3Prover/z3/issues/4146</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4149>https://github.com/Z3Prover/z3/issues/4149</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4150>https://github.com/Z3Prover/z3/issues/4150</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4154>https://github.com/Z3Prover/z3/issues/4154</a> Fixed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4155>https://github.com/Z3Prover/z3/issues/4155</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4156>https://github.com/Z3Prover/z3/issues/4156</a> Fixed<br>
+<a href=https://github.com/Z3Prover/z3/issues/4162>https://github.com/Z3Prover/z3/issues/4162</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4163>https://github.com/Z3Prover/z3/issues/4163</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4165>https://github.com/Z3Prover/z3/issues/4165</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4166>https://github.com/Z3Prover/z3/issues/4166</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4169>https://github.com/Z3Prover/z3/issues/4169</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4171>https://github.com/Z3Prover/z3/issues/4171</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4173>https://github.com/Z3Prover/z3/issues/4173</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4175>https://github.com/Z3Prover/z3/issues/4175</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4177>https://github.com/Z3Prover/z3/issues/4177</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4185>https://github.com/Z3Prover/z3/issues/4185</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4187>https://github.com/Z3Prover/z3/issues/4187</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4188>https://github.com/Z3Prover/z3/issues/4188</a> Reported<br>
+<a href=https://github.com/Z3Prover/z3/issues/4189>https://github.com/Z3Prover/z3/issues/4189</a> Reported<br>
+
 
