--- a/index.html
+++ b/index.html
@@ -64,17 +64,20 @@ We have maintained our continuous, extensive effort in stress-testing Z3 and CVC
 
 [1] <a href="https://wintered.github.io/papers/winterer-zhang-su-pldi20.pdf"><B>Validating SMT Solvers via Semantic Fusion</B></a>. 
 <br> 
-Dominik Winterer, Chengyu Zhang and Zhendong Su</br> 
-In <a
-href=""><I>Proceedings of
-PLDI'20</I></a>, London, UK, June 2020. <br>
+Dominik Winterer<sup>*</sup>, Chengyu Zhang<sup>*</sup> and Zhendong Su</br> 
+In <a href=""><I>Proceedings of PLDI'20</I></a>, London, UK, June 2020. </br>
+<div style="font-size:10pt; margin-top:5pt;margin-bottom:-10pt "><sup>*</sup> Both authors contributed equally to this work. </div>
 <p>
-
+<div>
+    <img src="img/award.png" width="36" style="vertical-align:middle">
+    <font color="red"><b>Distinguished Paper Award</b></font>
+</div>
+</p>
 [2] <a href="http://arxiv.org/pdf/2004.08799"><B>On the Unusual Effectiveness of Type-aware Mutations for Testing SMT Solvers</B></a>. 
 <br> 
-Dominik Winterer, Chengyu Zhang and Zhendong Su</br> 
+Dominik Winterer<sup>*</sup>, Chengyu Zhang<sup>*</sup> and Zhendong Su</br> 
 <I> CoRR, abs/2004.08799, 2020. </I> <br>
-
+<div style="font-size:10pt; margin-top:5pt"><sup>*</sup> Both authors contributed equally to this work. </div>
 <br>
 <br>
 
