added team information

--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@ Dominik Winterer<sup>*</sup>, Chengyu Zhang<sup>*</sup> and Zhendong Su</br>
 <br>
 <br>
 
+<h3>Team </h3> 
+<a href="https://people.inf.ethz.ch/suz">Zhendong Su</a><br>
+<a href="https://wintered.github.io/">Dominik Winterer</a><br>
+<a href="http://chengyuzhang.com">Chengyu Zhang</a><br>
+</font>
+<br>
+<br>
+
 </font>
 <tt>last modified: 2020.04.21</tt>
 </body>
