added twitter account description

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@ We have maintained our continuous, extensive effort in stress-testing Z3 and CVC
 
 <p>Report links: Semantic Fusion (<a href="yinyang_bugs.html">link</a>), Type-aware Mutation (<a href="opfuzz_bugs.html">link</a>)</p><br>
 
+You may also want to follow our twitter account <a href="https://twitter.com/testsmtsolvers">@testsmt</a> where we regularly tweet  
+on interesting bugs in Z3 and CVC4. 
+
 <h3>Papers</h3>
 
 [1] <a href="https://wintered.github.io/papers/winterer-zhang-su-pldi20.pdf"><B>Validating SMT Solvers via Semantic Fusion</B></a>. 
