--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ generating diverse type-correct formulas.
 
 YinYang and OpFuzz, the realizations of semantic fusion and type-aware
 operator mutation, have demonstrated their remarkable effectiveness by
-having already found close to 1,000 bugs in Z3 and CVC4, the two
+having already found 1,000+ bugs in Z3 and CVC4, the two
 state-of-the-art SMT solvers.
 
 <p>
