--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@ important project developments and regular tweets about interesting
 bugs in Z3 and CVC4.
 
 <h3>Publications</h3>
-
-[1] <a href="https://wintered.github.io/papers/winterer-zhang-su-pldi20.pdf">
+[1] <a href="https://testsmt.github.io/papers/winterer-zhang-su-pldi20.pdf">
   <B>Validating SMT Solvers via Semantic Fusion</B></a>.<br> 
 Dominik Winterer<sup>*</sup>, Chengyu Zhang<sup>*</sup> and Zhendong Su</br> 
 In <a href=""><I>Proceedings of PLDI'20</I></a>, London, UK, June 2020. </br>
