links to talk slides and vidoes

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ bugs in Z3 and CVC4.
 <h3>Publications</h3>
 
 [1] <a href="https://wintered.github.io/papers/winterer-zhang-su-pldi20.pdf">
-  <B>Validating SMT Solvers via Semantic Fusion</B></a>.<br> 
+  <B>Validating SMT Solvers via Semantic Fusion</B></a>.<br>
 Dominik Winterer<sup>*</sup>, Chengyu Zhang<sup>*</sup> and Zhendong Su</br> 
 In <a href=""><I>Proceedings of PLDI'20</I></a>, London, UK, June 2020. </br>
 <div style="font-size:10pt; margin-top:5pt;margin-bottom:-10pt "><sup>*</sup>
@@ -105,6 +105,13 @@ In <a href=""><I>Proceedings of PLDI'20</I></a>, London, UK, June 2020. </br>
     <font color="red"><b>Distinguished Paper Award</b></font>
 </div>
 </p>
+
+<p>
+  [<a href="https://testsmt.github.io/slides/pldi20-semantic-fusion.pdf"><b>slides</b></a> |
+  <a href="https://www.youtube.com/watch?list=PLyrlk8Xaylp5mvxARtX5ncjy9p4X_Ajwd&time_continue=1&v=JFu8cJYbxBI&feature=emb_logo"><b>video abstract</b></a> |
+  <a href="https://www.youtube.com/watch?v=zkU8WyqWO-Q&feature=youtu.be&t=7686"><b>talk video</b></a>]
+</p>
+
 [2] <a href="http://arxiv.org/pdf/2004.08799"><B>On the Unusual Effectiveness of Type-aware Mutations for Testing SMT Solvers</B></a>. 
 <br> 
 Dominik Winterer<sup>*</sup>, Chengyu Zhang<sup>*</sup> and Zhendong Su</br> 
