link to the acm dl copy of the paper

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@ bugs in Z3 and CVC4.
 <ol>
 
 <li>
-<a href="https://testsmt.github.io/papers/winterer-zhang-su-pldi20.pdf">
+  <!--<a href="https://testsmt.github.io/papers/winterer-zhang-su-pldi20.pdf">-->
+  <a href="https://dl.acm.org/doi/pdf/10.1145/3385412.3385985">
   <B>Validating SMT Solvers via Semantic Fusion</B></a>.<br> 
 Dominik Winterer<sup>*</sup>, Chengyu Zhang<sup>*</sup> and Zhendong Su</br> 
 In <a href=""><I>Proceedings of PLDI'20</I></a>, London, UK, June 2020. </br>
