update video link

--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@ In <a href=""><I>Proceedings of PLDI'20</I></a>, London, UK, June 2020. </br>
 <p>
   [<a href="https://testsmt.github.io/slides/pldi20-semantic-fusion.pdf"><b>slides</b></a> |
   <a href="https://www.youtube.com/watch?list=PLyrlk8Xaylp5mvxARtX5ncjy9p4X_Ajwd&time_continue=1&v=JFu8cJYbxBI&feature=emb_logo"><b>video abstract</b></a> |
-  <a href="https://www.youtube.com/watch?v=zkU8WyqWO-Q&feature=youtu.be&t=7686"><b>talk video</b></a>]
+  <a href="https://www.youtube.com/watch?v=hEWpbO5yXPw&list=PLyrlk8Xaylp5mvxARtX5ncjy9p4X_Ajwd&index=178"><b>talk video</b></a>]
+
+<!--<a href="https://www.youtube.com/watch?v=zkU8WyqWO-Q&feature=youtu.be&t=7686"><b>talk video</b></a>]-->
 </p>
 
 </li>
