--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ bugs in Z3 and CVC4.
   <a href="https://dl.acm.org/doi/pdf/10.1145/3385412.3385985">
   <B>Validating SMT Solvers via Semantic Fusion</B></a>.<br> 
 Dominik Winterer<sup>*</sup>, Chengyu Zhang<sup>*</sup> and Zhendong Su</br> 
-In <a href=""><I>Proceedings of PLDI'20</I></a>, London, UK, June 2020. </br>
+In <a href="https://conf.researchr.org/home/pldi-2020"><I>Proceedings of PLDI 2020</I></a>, London, UK, June 2020. </br>
 <div style="font-size:10pt; margin-top:5pt;margin-bottom:-10pt "><sup>*</sup>
   Both authors contributed equally to this work.
 </div>
@@ -121,11 +121,16 @@ In <a href=""><I>Proceedings of PLDI'20</I></a>, London, UK, June 2020. </br>
 </li>
 
 <li>
-<a href="http://arxiv.org/pdf/2004.08799"><B>On the Unusual Effectiveness of Type-aware Mutations for Testing SMT Solvers</B></a>. 
+<a href=""><B>On the Unusual Effectiveness of Type-aware Mutations for Testing SMT Solvers</B></a>. 
 <br> 
-Dominik Winterer<sup>*</sup>, Chengyu Zhang<sup>*</sup> and Zhendong Su</br> 
-<I> CoRR, abs/2004.08799, 2020. </I> <br>
+Dominik Winterer<sup>*</sup>, Chengyu Zhang<sup>*</sup> and Zhendong Su</br>
+In <a href="https://2020.splashcon.org/"><I>Proceedings of SPLASH/OOPSLA 2020</I></a>, November 2020.
+(<i>conditionally accepted</i>)</br>
 <div style="font-size:10pt; margin-top:5pt"><sup>*</sup> Both authors contributed equally to this work. </div>
+
+<p>
+arXiv preprint: <a href="https://arxiv.org/abs/2004.08799"><I>CoRR, abs/2004.08799</I></a>, April 2020.
+</p>
 </li>
 
 </ol>
@@ -136,6 +141,6 @@ Dominik Winterer<sup>*</sup>, Chengyu Zhang<sup>*</sup> and Zhendong Su</br>
 
 <br>
 
-<tt>last modified: 2020.06.23</tt>
+<tt>last modified: 2020.08.01</tt>
 </body>
 </html>
