Updating counts and report links

--- a/opfuzz_bugs.html
+++ b/opfuzz_bugs.html
@@ -2,6 +2,7 @@
 <h2>========= CVC4 =========</h2>
 <h2>Soundness Bugs</h2>
 <h4>Refutation Soundness</h4>
+<a href="https://github.com/CVC4/CVC4/issues/4735">https://github.com/CVC4/CVC4/issues/4735</a> Reported <br />
 <a href="https://github.com/CVC4/CVC4/issues/4644">https://github.com/CVC4/CVC4/issues/4644</a> Reported <br />
 <a href="https://github.com/CVC4/CVC4/issues/4631">https://github.com/CVC4/CVC4/issues/4631</a> Confirmed <br />
 <a href="https://github.com/CVC4/CVC4/issues/4620">https://github.com/CVC4/CVC4/issues/4620</a> Fixed <br />
@@ -22,6 +23,7 @@
 <a href="https://github.com/CVC4/CVC4/issues/3498">https://github.com/CVC4/CVC4/issues/3498</a> Fixed <br />
 
 <h4>Solution Soundness</h4>
+<a href="https://github.com/CVC4/CVC4/issues/4656">https://github.com/CVC4/CVC4/issues/4656</a> Reported <br />
 <a href="https://github.com/CVC4/CVC4/issues/4631">https://github.com/CVC4/CVC4/issues/4631</a> Confirmed <br />
 <a href="https://github.com/CVC4/CVC4/issues/4503">https://github.com/CVC4/CVC4/issues/4503</a> Fixed <br />
 <a href="https://github.com/CVC4/CVC4/issues/4501">https://github.com/CVC4/CVC4/issues/4501</a> Fixed <br />
@@ -36,6 +38,22 @@
 <a href="https://github.com/CVC4/CVC4/issues/3950">https://github.com/CVC4/CVC4/issues/3950</a> Won't fix <br />
 <a href="https://github.com/CVC4/CVC4/issues/3587">https://github.com/CVC4/CVC4/issues/3587</a> Fixed <br />
 <h2>Others</h2>
+<a href="https://github.com/CVC4/CVC4/issues/4851">https://github.com/CVC4/CVC4/issues/4851</a> Reported <br />
+<a href="https://github.com/CVC4/CVC4/issues/4850">https://github.com/CVC4/CVC4/issues/4850</a> Reported <br />
+<a href="https://github.com/CVC4/CVC4/issues/4849">https://github.com/CVC4/CVC4/issues/4849</a> Reported <br />
+<a href="https://github.com/CVC4/CVC4/issues/4796">https://github.com/CVC4/CVC4/issues/4796</a> Reported <br />
+<a href="https://github.com/CVC4/CVC4/issues/4795">https://github.com/CVC4/CVC4/issues/4795</a> Reported <br />
+<a href="https://github.com/CVC4/CVC4/issues/4794">https://github.com/CVC4/CVC4/issues/4794</a> Reported <br />
+<a href="https://github.com/CVC4/CVC4/issues/4780">https://github.com/CVC4/CVC4/issues/4780</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4759">https://github.com/Z3Prover/z3/issues/4759</a> Reported <br />
+<a href="https://github.com/CVC4/CVC4/issues/4758">https://github.com/CVC4/CVC4/issues/4758</a> Confirmed <br />
+<a href="https://github.com/CVC4/CVC4/issues/4714">https://github.com/CVC4/CVC4/issues/4714</a> Reported <br />
+<a href="https://github.com/CVC4/CVC4/issues/4707">https://github.com/CVC4/CVC4/issues/4707</a> Reported <br />
+<a href="https://github.com/CVC4/CVC4/issues/4701">https://github.com/CVC4/CVC4/issues/4701</a> Reported <br />
+<a href="https://github.com/CVC4/CVC4/issues/4685">https://github.com/CVC4/CVC4/issues/4685</a> Reported <br />
+<a href="https://github.com/CVC4/CVC4/issues/4686">https://github.com/CVC4/CVC4/issues/4686</a> Reported <br />
+<a href="https://github.com/CVC4/CVC4/issues/4674">https://github.com/CVC4/CVC4/issues/4674</a> Reported <br />
+<a href="https://github.com/CVC4/CVC4/issues/4662">https://github.com/CVC4/CVC4/issues/4662</a> Reported <br />
 <a href="https://github.com/CVC4/CVC4/issues/4500">https://github.com/CVC4/CVC4/issues/4500</a> Fixed <br />
 <a href="https://github.com/CVC4/CVC4/issues/4490">https://github.com/CVC4/CVC4/issues/4490</a> Confirmed <br />
 <a href="https://github.com/CVC4/CVC4/issues/4483">https://github.com/CVC4/CVC4/issues/4483</a> Fixed <br />
@@ -253,6 +271,16 @@
 <h2>========= Z3 =========</h2>
 <h2>Soundness Bugs</h2>
 <h4>Refutation Soundness</h4>
+<a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-667189458">https://github.com/Z3Prover/z3/issues/4532#issuecomment-667189458</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4607#issue-669572743">https://github.com/Z3Prover/z3/issues/4607#issue-669572743</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-664640834">https://github.com/Z3Prover/z3/issues/4532#issuecomment-664640834</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4590#issuecomment-664048612">https://github.com/Z3Prover/z3/issues/4590#issuecomment-664048612</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-664033954">https://github.com/Z3Prover/z3/issues/4532#issuecomment-664033954</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-660500673">https://github.com/Z3Prover/z3/issues/4532#issuecomment-660500673</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4518#issuecomment-657133104">https://github.com/Z3Prover/z3/issues/4518#issuecomment-657133104</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4518#issuecomment-651681842">https://github.com/Z3Prover/z3/issues/4518#issuecomment-651681842</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-651388720">https://github.com/Z3Prover/z3/issues/4532#issuecomment-651388720</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-647014226">https://github.com/Z3Prover/z3/issues/4532#issuecomment-647014226</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/4518#issuecomment-646055042">https://github.com/Z3Prover/z3/issues/4518#issuecomment-646055042</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/4518#issue-638850637">https://github.com/Z3Prover/z3/issues/4518#issue-638850637</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/4461">https://github.com/Z3Prover/z3/issues/4461</a> Fixed <br />
@@ -273,7 +301,7 @@
 <a href="https://github.com/Z3Prover/z3/issues/4300">https://github.com/Z3Prover/z3/issues/4300</a> Dup <br />
 <a href="https://github.com/Z3Prover/z3/issues/4299">https://github.com/Z3Prover/z3/issues/4299</a> Dup <br />
 <a href="https://github.com/Z3Prover/z3/issues/4280">https://github.com/Z3Prover/z3/issues/4280</a> Confirmed <br />
-<a href="https://github.com/Z3Prover/z3/issues/4275">https://github.com/Z3Prover/z3/issues/4275</a> Confirmed <br />
+<a href="https://github.com/Z3Prover/z3/issues/4275">https://github.com/Z3Prover/z3/issues/4275</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/4273">https://github.com/Z3Prover/z3/issues/4273</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/4272">https://github.com/Z3Prover/z3/issues/4272</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/4270">https://github.com/Z3Prover/z3/issues/4270</a> Fixed <br />
@@ -362,13 +390,16 @@
 <a href="https://github.com/Z3Prover/z3/issues/2768">https://github.com/Z3Prover/z3/issues/2768</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2752">https://github.com/Z3Prover/z3/issues/2752</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2699">https://github.com/Z3Prover/z3/issues/2699</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/2680">https://github.com/Z3Prover/z3/issues/2680</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/2680">https://github.com/Z3Prover/z3/issues/2680</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/2717">https://github.com/Z3Prover/z3/issues/2717</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2715">https://github.com/Z3Prover/z3/issues/2715</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2678">https://github.com/Z3Prover/z3/issues/2678</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2592">https://github.com/Z3Prover/z3/issues/2592</a> Fixed <br />
 
 <h4>Solution Soundness</h4>
+<a href="https://github.com/Z3Prover/z3/issues/4607#issuecomment-667066233">https://github.com/Z3Prover/z3/issues/4607#issuecomment-667066233</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/1051">https://github.com/Z3Prover/z3/issues/1051</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-648218012">https://github.com/Z3Prover/z3/issues/4532#issuecomment-648218012</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/4428">https://github.com/Z3Prover/z3/issues/4428</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/4423">https://github.com/Z3Prover/z3/issues/4423</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/4421">https://github.com/Z3Prover/z3/issues/4421</a> Dup <br />
@@ -450,7 +481,7 @@
 <a href="https://github.com/Z3Prover/z3/issues/2920">https://github.com/Z3Prover/z3/issues/2920</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2917">https://github.com/Z3Prover/z3/issues/2917</a> Won't fix <br />
 <a href="https://github.com/Z3Prover/z3/issues/2896">https://github.com/Z3Prover/z3/issues/2896</a> Dup <br />
-<a href="link:https://github.com/Z3Prover/z3/issues/2894">link:https://github.com/Z3Prover/z3/issues/2894</a> Confirmed <br />
+<a href="link:https://github.com/Z3Prover/z3/issues/2894">link:https://github.com/Z3Prover/z3/issues/2894</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2870">https://github.com/Z3Prover/z3/issues/2870</a> Won't fix <br />
 <a href="https://github.com/Z3Prover/z3/issues/2650">https://github.com/Z3Prover/z3/issues/2650</a> Confirmed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2852">https://github.com/Z3Prover/z3/issues/2852</a> Fixed <br />
@@ -472,11 +503,27 @@
 <a href="https://github.com/Z3Prover/z3/issues/2597">https://github.com/Z3Prover/z3/issues/2597</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2593">https://github.com/Z3Prover/z3/issues/2593</a> Fixed <br />
 <h2>Others</h2>
+<a href="https://github.com/Z3Prover/z3/issues/4613">https://github.com/Z3Prover/z3/issues/4613</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-667193930">https://github.com/Z3Prover/z3/issues/4532#issuecomment-667193930</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4607#issuecomment-667191511">https://github.com/Z3Prover/z3/issues/4607#issuecomment-667191511</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4607#issuecomment-667190922">https://github.com/Z3Prover/z3/issues/4607#issuecomment-667190922</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4607#issuecomment-667010751">https://github.com/Z3Prover/z3/issues/4607#issuecomment-667010751</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-665957789">https://github.com/Z3Prover/z3/issues/4532#issuecomment-665957789</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4518#issuecomment-665944279">https://github.com/Z3Prover/z3/issues/4518#issuecomment-665944279</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4518#issuecomment-665941712">https://github.com/Z3Prover/z3/issues/4518#issuecomment-665941712</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4518#issuecomment-665939105">https://github.com/Z3Prover/z3/issues/4518#issuecomment-665939105</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-664036196">https://github.com/Z3Prover/z3/issues/4532#issuecomment-664036196</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-664034976">https://github.com/Z3Prover/z3/issues/4532#issuecomment-664034976</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/4518#issuecomment-659706935">https://github.com/Z3Prover/z3/issues/4518#issuecomment-659706935</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4518#issuecomment-659704281">https://github.com/Z3Prover/z3/issues/4518#issuecomment-659704281</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-648047504">https://github.com/Z3Prover/z3/issues/4532#issuecomment-648047504</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-647158689">https://github.com/Z3Prover/z3/issues/4532#issuecomment-647158689</a> Fixed <br />
+<a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-647026126">https://github.com/Z3Prover/z3/issues/4532#issuecomment-647026126</a> Fixed <br />
 <a href="link:https://github.com/Z3Prover/z3/issues/4532#issue-641299448">link:https://github.com/Z3Prover/z3/issues/4532#issue-641299448</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/4450">https://github.com/Z3Prover/z3/issues/4450</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/4448">https://github.com/Z3Prover/z3/issues/4448</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/4447">https://github.com/Z3Prover/z3/issues/4447</a> Fixed <br />
-<a href="https://github.com/Z3Prover/z3/issues/4446">https://github.com/Z3Prover/z3/issues/4446</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/4446">https://github.com/Z3Prover/z3/issues/4446</a> Won't fix <br />
 <a href="https://github.com/Z3Prover/z3/issues/4437">https://github.com/Z3Prover/z3/issues/4437</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/4432">https://github.com/Z3Prover/z3/issues/4432</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/4429">https://github.com/Z3Prover/z3/issues/4429</a> Fixed <br />
@@ -612,7 +659,7 @@
 <a href="https://github.com/Z3Prover/z3/issues/3898">https://github.com/Z3Prover/z3/issues/3898</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/3897">https://github.com/Z3Prover/z3/issues/3897</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/3895">https://github.com/Z3Prover/z3/issues/3895</a> Dup <br />
-<a href="https://github.com/Z3Prover/z3/issues/3894">https://github.com/Z3Prover/z3/issues/3894</a> Confirmed <br />
+<a href="https://github.com/Z3Prover/z3/issues/3894">https://github.com/Z3Prover/z3/issues/3894</a> Won't fix <br />
 <a href="https://github.com/Z3Prover/z3/issues/3892">https://github.com/Z3Prover/z3/issues/3892</a> Confirmed <br />
 <a href="https://github.com/Z3Prover/z3/issues/3889">https://github.com/Z3Prover/z3/issues/3889</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/3888">https://github.com/Z3Prover/z3/issues/3888</a> Fixed <br />
