--- a/yinyang_bugs.html
+++ b/yinyang_bugs.html
@@ -16,6 +16,7 @@
 <a href="https://github.com/CVC4/CVC4/issues/3106">https://github.com/CVC4/CVC4/issues/3106</a> Confirmed <br />
 
 <h2>Z3</h2>
+<a href="https://github.com/Z3Prover/z3/issues/4532">https://github.com/Z3Prover/z3/issues/4532</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-648048990">https://github.com/Z3Prover/z3/issues/4532#issuecomment-648048990</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/4532#issuecomment-646721686">https://github.com/Z3Prover/z3/issues/4532#issuecomment-646721686</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/4518#issue-638850637">https://github.com/Z3Prover/z3/issues/4518#issue-638850637</a> Reported <br />
